fixed layout issue in GameCard

--- a/src/components/HomePage/GameCard/style.module.css
+++ b/src/components/HomePage/GameCard/style.module.css
@@ -1,29 +1,31 @@
-:root {
-  --border-radius: 10px;
-}
-
 .container {
   width: 200px;
   height: 300px;
   background-color: transparent;
   perspective: 1000px;
+  position: relative;
 }
 
-.innerContainer {
-  position: relative;
+.container:hover .containerFront {
+  transform: rotateY(180deg);
+}
+
+.container:hover .containerBack {
+  transform: rotateY(0deg);
+}
+
+.containerFront,
+.containerBack {
   width: 100%;
   height: 100%;
   transition: transform 0.7s;
   transform-style: preserve-3d;
-}
-
-.container:hover .innerContainer {
-  transform: rotateY(180deg);
+  position: absolute;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
 }
 
 .containerFront {
-  width: 100%;
-  height: 100%;
   border: var(--active-color) 1px solid;
   border-radius: var(--border-radius);
   overflow: hidden;
@@ -91,22 +93,13 @@
   line-height: 1.2rem;
 }
 
-.containerFront,
 .containerBack {
-  position: absolute;
-  backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-}
-
-.containerBack {
-  width: 100%;
-  height: 100%;
+  transform: rotateY(-180deg);
   border: var(--active-color) 1px solid;
   border-radius: var(--border-radius);
   overflow: hidden;
   background: var(--dark-color);
   box-shadow: 0 0 10px var(--active-color);
-  transform: rotateY(180deg);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -134,16 +127,14 @@
 
 .button:hover {
   color: var(--dark-color);
-  /* transform: scale(1.05); */
 }
 
 .button:active {
   color: var(--primary-color);
-  /* transform: scale(1); */
 }
 
 .btnContainer {
   display: flex;
-  /* justify-content: space-between; */
+  justify-content: space-around;
   width: 80%;
 }
